--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     working_directory: ~/workspace/circleci
     steps:
       - checkout
-      - test:
+      - golang/test:
           coverage-report-path: coverage.out
           repo-name: clops_cicd_poc
           repo-owner: vijyantg
