--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.1.1
-  golang: bulderbank/golang@1.4.1  
+  go: travelaudience/go@0.8.0  
 jobs:
   buildanddeploy:
     docker:
@@ -13,11 +13,12 @@ jobs:
     working_directory: ~/workspace/circleci
     steps:
       - checkout
-      - golang/test:
-          coverage-report-path: coverage.out
-          repo-name: clops_cicd_poc
-          repo-owner: vijyantg
-          tests-report-dir: ~/workspace/circleci/report.json
+      - run: go vet ./...      
+#       - golang/test:
+#           coverage-report-path: coverage.out
+#           repo-name: clops_cicd_poc
+#           repo-owner: vijyantg
+#           tests-report-dir: ~/workspace/circleci/report.json
  
 #       - run: |
 #           pwd
