--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,9 @@ jobs:
           ls -lart
       - run: |         
           
-          go test main_test.go
+          go test -coverprofile=coverage.out main_test.go
 #          go test -cover
-#          go test -coverprofile=coverage.out
+#          go test 
 #          go tool cover -html=coverage.out
 #          go tool cover -func=coverage-report.out
       - sonarcloud/scan
