--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,8 @@ sonar.organization=vijyantg
 # sonar.projectName=clops_cicd_poc
 sonar.projectVersion=1.0
 sonar.sources=.
+sonar.exclusions=**/*_test.go,**/vendor/**,**/testdata/* 
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+sonar.test.exclusions=**/vendor/**
+sonar.go.coverage.reportPaths=~/coverage.out
