--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - checkout
       - run: |                   
-          go test -cover -coverprofile=coverage.out #main_test.go -v
+          go test -cover -coverprofile=coverage.out "./..." #main_test.go -v
           cat coverage.out
           go tool cover -html=coverage.out
           go tool cover -func=coverage.out
