--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - checkout
       - run: |
-          go test main.go main_test.go -v
+          go test main_test.go -v
           go test -cover -v
           go test -coverprofile=coverage.out #main.go main_test.go -v         
           go tool cover -html=coverage.out
