--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - checkout
       - run: |
+          gp mod init
           go test main_test.go -v
           go test -cover -v
           go test -coverprofile=coverage.out #main.go main_test.go -v         
