--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
       - run: |
           mkdir projects && cd projects && mkdir mymodule
           go mod init mmodule
+          go mod tidy && go get main_test.go,
           go test main_test.go -v
           go test -cover -v
           go test -coverprofile=coverage.out #main.go main_test.go -v         
