--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ jobs:
 #          # go test -cover -v
 #           go test -coverprofile=coverage.out #main.go main_test.go -v         
 #           go tool cover -html=coverage.out
-#           go tool cover -func=coverage.out
-          pwd
-          ls -lart
+# #           go tool cover -func=coverage.out
+#           pwd
+#           ls -lart
       - sonarcloud/scan
       - setup_remote_docker:
           version: 20.10.14
